# multithreading-lab

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
benchmarks/: README.md  aggregate.py  cases.json  compare.html  gen_cases.py  python_bench.py  run-all.sh
cpp/: CMakeLists.txt  Dockerfile  README.md
cpp/src/: bench.cpp  main.cpp  search.cpp  search.h
cpp/test/: test_search.cpp
go/: Dockerfile  README.md  go.mod  main.go
go/bench/: main.go
go/search/: search.go  search_test.go
java/: Dockerfile  README.md  pom.xml
java/src/main/resources/: application.properties
load-tests/: README.md  artillery.yml  compare-report.html  compare.py  generate_queries.py  package-lock.json  package.json  payload-processor.js  queries.csv  run-all.sh
nest/: Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
nest/src/: app.module.ts  bench.ts  main.ts  unidecode.d.ts
nest/src/common/: error.filter.ts
nest/src/health/: health.controller.ts
nest/src/search/: search.controller.ts  search.module.ts  search.service.ts  search.ts  search.worker.ts  worker-pool.ts
nest/src/search/dto/: search.dto.ts
nest/test/: search.spec.ts  worker-pool.spec.ts
python/: .dockerignore  Dockerfile  README.md  api.py  common.py  main.py  parallel.py  pyproject.toml  report.md  seek_words.py  strategy_indexed.py  strategy_scan.py  test_dispatch.py  test_parallel.py  test_seek_words.py
python-base/: .dockerignore  Dockerfile  README.md  api.py  report.html  seek_words.py  test_parallel.py  test_seek_words.py
python-improved/: Dockerfile  README.md  api.py  parallel.py  report.html  seek_words.py  test_seek_words.py
python-indexed/: Dockerfile  README.md  api.py  pyproject.toml  seek_words.py
(+12 files in other folders)
